# BarbellGPT

./: .gitignore  cli.py  config.py  env_example.txt  knowledge_builder.py  main.py  pyproject.toml  requirements.txt  run.py  test_core.py  test_offline.py
.cursor/rules/: llm-langchain-develop-rule.mdc
agents/: __init__.py  conversation_manager.py  rag_agent.py
core/: __init__.py  llm_manager.py  retriever.py  vector_store.py
docs/: architecture.md  component_diagram.md  spec.md  计划于进展.md
knowledge/: __init__.py  document_loader.py  text_processor.py  vectorizer.py
tests/: check_vector_store.py  test_llm.py
tests/data/chroma_db/: chroma.sqlite3
tutorial/: langgraph状态传递问题.md  python中蛋疼的路径问题.md  streamlit经验总结.md  创建虚拟环境.md  向量模型处理代办.md  如何加载其他路径下的模块.md
ui/: __init__.py  chat_interface.py
utils/: __init__.py
