[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barbellgpt"
version = "0.1.0"
description = "AI 力量举训练智能助手"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

# 添加构建配置
[tool.hatch.build.targets.wheel]
packages = ["knowledge", "core", "agents", "ui"]

# 注释掉这行，因为我们还没有main模块
# [project.scripts]
# barbellgpt = "barbellgpt.main:main"
