[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barbellgpt"
version = "0.1.0"
description = "AI 力量举训练智能助手"
requires-python = ">=3.10"
dependencies = [
    # 核心AI框架
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    
    # 大语言模型和向量模型
    "dashscope>=1.14.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    
    # 向量数据库
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    
    # Web界面
    "streamlit>=1.28.0",
    
    # 文档处理
    "pypdf>=3.17.0",
    "python-docx>=0.8.11",
    "markdown>=3.5.0",
    "unstructured>=0.10.0",
    
    # 数据验证和配置
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # 日志和工具
    "loguru>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

# 添加构建配置
[tool.hatch.build.targets.wheel]
packages = ["knowledge", "core", "agents", "ui"]

# 注释掉这行，因为我们还没有main模块
# [project.scripts]
# barbellgpt = "barbellgpt.main:main"
